<resources>
    <string name="app_name">address</string>
    <string name="address">연락처</string>
    <string name="name">강아현</string>
    <string name="num">010-1234-5678</string>
    <string name="email">hustar0@hustar.com</string>
    <string name="profile">내 프로필</string>
    <string name="phone_label">휴대폰</string>
    <string name="email_label">이메일</string>
    <string name="ok">확인</string>
    <string name="my_address">내 연락처</string>
    <string name="name_hint">이름</string>
    <string name="todo">TODO</string>
</resources>