<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/imageView_profile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/textView_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="9dp"
            android:layout_marginBottom="3dp"
            android:layout_toRightOf="@id/imageView_profile"
            android:onClick="onClick"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_name"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/imageView_profile"
            android:text="@string/num"
            android:textColor="@color/black"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/textView_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_num"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/imageView_profile"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="10sp" />

    </RelativeLayout>

</LinearLayout>