<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_mine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:layout_weight="10"
            android:text="@string/address"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView_add"
            android:layout_width="10dp"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            android:onClick="onAdd"
            app:srcCompat="@drawable/plus" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/profile"
            android:textColor="@android:color/darker_gray"
            android:textSize="10sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:background="?attr/colorButtonNormal" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:clickable="true"
        android:onClick="onClick">

        <ImageView
            android:id="@+id/imageView_profile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/user" />

        <TextView
            android:id="@+id/textView_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="9dp"
            android:layout_marginBottom="3dp"
            android:layout_toRightOf="@id/imageView_profile"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_name"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/imageView_profile"
            android:text="@string/num"
            android:textColor="@color/black"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/textView_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_num"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/imageView_profile"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="10sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textVeiw_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/my_address"
            android:textColor="@android:color/darker_gray"
            android:textSize="10sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:background="?attr/colorButtonNormal" />
    </LinearLayout>

    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>