<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="270dp"
    android:layout_height="320dp"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="15dp">

    <ImageView
        android:id="@+id/imageView_delete"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_gravity="right"
        app:srcCompat="@drawable/garbage"
        android:contentDescription="TODO" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        app:srcCompat="@drawable/user"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/dlg_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="15dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/phone_label"
        android:textSize="10sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dlg_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="center_vertical"
        android:background="?attr/colorButtonNormal" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/email_label"
        android:textSize="10sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dlg_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="center_vertical"
        android:background="?attr/colorButtonNormal" />

    <Button
        android:id="@+id/button_ok"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/ok"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:backgroundTint="@color/white" />

</LinearLayout>